# ipulang

./: .envrc  .gitignore  Cargo.toml  README.md  a.out  debug.vm  justfile  sintax  test.c  test.ll  test.s
examples/: inkwell-alloca.ll  inkwell-alloca.rs  nom1.rs
ipulang-codegen/: Cargo.toml
ipulang-codegen-llvm/: Cargo.toml
ipulang-codegen-llvm/src/codegen/: context.rs
ipulang-codegen-tinyvm/: Cargo.toml
ipulang-codegen-tinyvm/src/: instructions.rs  lib.rs
ipulang-codegen-vm/: Cargo.toml
ipulang-codegen-vm/src/: codegen.rs  instructions.rs  lib.rs  operand.rs
ipulang-codegen/src/codegen/: mod.rs
ipulang-compiler/: Cargo.toml  README.md  a.out  bench.ll  justfile  sintax
ipulang-compiler/examples/: inkwell-alloca.s  nom_test.rs
ipulang-compiler/src/: ast.rs  codegen.rs  main.rs  nodes.rs  type_check.rs  types.rs
ipulang-compiler/test_codes/: bench  bench.ipu  bench.ll  bench.s  fizzbuzz  fizzbuzz.ipu  fizzbuzz.ll  fizzbuzz.s  getchar.ipu  test0.ipu  test1.ipu  test10  test10.ipu  test10.ll  test10.s  test11  test11.ipu  test11.ll  test11.s  test12  test12.ipu  test12.ll  test12.s  test13.ipu  test13.ll  test2.ipu  test3.ipu  test3.s  test4  test4.ipu  test4.ll  test4.s  test5  test5.ipu  test5.ll  test5.s  test6  test6.ipu  test6.ll  test6.s  (+12 more)
ipulang-extension/: extension.js  package-lock.json  package.json
ipulang-lsp/: Cargo.toml
ipulang-lsp/src/: main.rs
ipulang-parser/: Cargo.toml
ipulang-parser/examples/: nom1.rs
ipulang-parser/src/: ast.rs  lib.rs  nodes.rs  types.rs
ipulang-typecheck/: Cargo.toml
ipulang-typecheck/src/: type_check.rs
src/: ast.rs  codegen.rs  main.rs  nodes.rs
test_codes/: bench.c  bench.ipu  expect1.pl0  fizzbuzz.ipu  test1.cmm  test10.ipu  test11.ipu  test13.ipu  test14.ipu  test2.cmm  test2.ipu  test2.ll  test2.s  test3.ipu  test3.ll  test4.ipu  test4.ll  test5.cmm  test5.ipu  test5.ll  test5.s  test6.ipu  test9-2.ipu  test9.ipu
