[package]
name = "ipulang-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "3.0.0-rc.8", features = ["derive"] }
ipulang-parser = { path = "../ipulang-parser" }
ipulang-typecheck = { path = "../ipulang-typecheck" }
ipulang-codegen = { path = "../ipulang-codegen" }