[package]
name = "ipulang-compiler"
version = "0.1.0"
edition = "2021"

[features]
default = [ "tinyvm" ]
llvm = ["dep:ipulang-codegen-llvm"]
tinyvm = ["dep:ipulang-codegen-tinyvm"]

[dependencies]
anyhow = "1"
clap = { version = "4.2.1", features = ["derive"] }
ipulang-parser = { path = "../ipulang-parser" }
ipulang-typecheck = { path = "../ipulang-typecheck" }
ipulang-codegen-llvm = { path = "../ipulang-codegen-llvm", optional = true }
ipulang-codegen-tinyvm = { path = "../ipulang-codegen-tinyvm", optional = true }