[package]
name = "ipulang-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-lsp = "0.19.0"
tokio = {version = "1.15.0", features = ["io-std", "io-util", "macros", "net", "rt-multi-thread", "time"] }